--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -7,9 +7,8 @@ spring.application.name=habit-tracker
 server.port=${PORT:8080}
 
 # PostgreSQL Database Configuration (using environment variables)
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD}
+# Note: Render provides postgres:// URL, but we need jdbc:postgresql://
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration for Production
