--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -32,3 +32,7 @@ logging.level.com.habittracker=INFO
 logging.level.org.springframework.security=WARN
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate.SQL=WARN
+
+# Timezone Configuration
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
+spring.jackson.time-zone=Asia/Seoul
