--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,6 +27,10 @@ jwt.expiration=86400000
 # CORS Configuration
 cors.allowed-origins=http://localhost:3000
 
+# Timezone Configuration
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Seoul
+spring.jackson.time-zone=Asia/Seoul
+
 # MySQL Configuration (Uncomment when deploying)
 #spring.datasource.url=jdbc:mysql://localhost:3306/habitdb?createDatabaseIfNotExist=true
 #spring.datasource.username=root
