--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -12,10 +12,15 @@ spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration for Production
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
 
 # Disable H2 Console in production
 spring.h2.console.enabled=false
