fix: 개발 환경에서 Flyway 비활성화
H2 데이터베이스는 IF NOT EXISTS 구문을 지원하지 않아 Flyway 마이그레이션 에러 발생
개발 환경에서는 Flyway를 비활성화하고 JPA 자동 스키마 생성 사용
프로덕션(PostgreSQL)에서는 Flyway가 정상 작동함

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,6 +20,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# Flyway (disabled for H2 development, enabled in production)
+spring.flyway.enabled=false
+
 # JWT Secret Key (Change this in production!)
 jwt.secret=your-secret-key-change-this-in-production-make-it-very-long-and-secure
 jwt.expiration=86400000
