--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -49,3 +49,9 @@ vapid.subject=mailto:your-email@example.com
 logging.level.com.habittracker=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+# Swagger/OpenAPI Configuration (enabled in development)
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
