--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -23,7 +23,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#007bff",
+  "theme_color": "#3B82F6",
   "background_color": "#ffffff",
   "orientation": "portrait"
 }
