feat: Docker 컨테이너 타임존을 Asia/Seoul로 설정
- ENV TZ=Asia/Seoul 환경변수 설정
- tzdata를 사용하여 시스템 타임존을 한국시간으로 구성
- JVM 실행 시 -Duser.timezone=Asia/Seoul 옵션 추가
- 이제 컨테이너와 애플리케이션 모두 한국시간 사용

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,14 @@ RUN gradle build -x test --no-daemon
 # Run stage
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
+
+# Set timezone to Asia/Seoul
+ENV TZ=Asia/Seoul
+RUN apk add --no-cache tzdata && \
+    cp /usr/share/zoneinfo/$TZ /etc/localtime && \
+    echo $TZ > /etc/timezone && \
+    apk del tzdata
+
 # Copy the jar file (use wildcard to match any version)
 COPY --from=build /app/build/libs/*.jar app.jar
 
@@ -14,4 +22,4 @@ COPY --from=build /app/build/libs/*.jar app.jar
 EXPOSE 8080
 
 # Run with production profile
-ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-Duser.timezone=Asia/Seoul", "-jar", "app.jar"]
