--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
+    "recharts": "^3.5.1",
     "sockjs-client": "^1.6.1",
     "tailwind-merge": "^3.4.0",
     "web-vitals": "^2.1.4"
