feat: Google Play Store 등록용 TWA 패키지 추가
- PWABuilder로 생성한 APK/AAB 파일 추가
- assetlinks.json 추가 (/.well-known/)
- Android TWA manifest 설정

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ Thumbs.db
 *.swp
 *.swo
 *~
+
+# Android signing keys (sensitive)
+android-twa/pwabuilder/signing.keystore
+android-twa/pwabuilder/signing-key-info.txt
