--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     // Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // Mail (for password reset)
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
     // Flyway (for database migrations)
     implementation 'org.flywaydb:flyway-core'
     runtimeOnly 'org.flywaydb:flyway-database-postgresql'
