--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -50,3 +50,15 @@ vapid.subject=mailto:your-email@example.com
 # Swagger/OpenAPI Configuration (disable in production)
 springdoc.swagger-ui.enabled=false
 springdoc.api-docs.enabled=false
+
+# Gmail SMTP Configuration for Password Reset
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# Frontend URL (for password reset email links)
+app.frontend-url=${FRONTEND_URL}
